to avoid overlapping pics

--- a/custom.css
+++ b/custom.css
@@ -72,7 +72,7 @@
   float: right; 
   shape-outside: circle(49%);
   border: 0px white; 
-  max-width: 30%;
+  max-width: 25%;
   height: auto; 
   clear: both;
   border-radius: 80%;
